--- a/javascript/index.html
+++ b/javascript/index.html
@@ -15,6 +15,7 @@
 <script src="game.js"></script>
 <script src="stage.js"></script>
 <script src="back.js"></script>
+<script src="backWall.js"></script>
 
 <script>
 
