--- a/javascript/index.html
+++ b/javascript/index.html
@@ -16,6 +16,7 @@
 <script src="stage.js"></script>
 <script src="back.js"></script>
 <script src="backWall.js"></script>
+<script src="leftWall.js"></script>
 
 <script>
 
