right wall done

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -17,6 +17,7 @@
 <script src="back.js"></script>
 <script src="backWall.js"></script>
 <script src="leftWall.js"></script>
+<script src="rightWall.js"></script>
 
 <script>
 
