--- a/javascript/index.html
+++ b/javascript/index.html
@@ -18,6 +18,7 @@
 <script src="backWall.js"></script>
 <script src="leftWall.js"></script>
 <script src="rightWall.js"></script>
+<script src="leftSpeaker.js"></script>
 <script src="bouncer.js"></script>
 
 <script>
