--- a/javascript/index.html
+++ b/javascript/index.html
@@ -19,6 +19,7 @@
 <script src="leftWall.js"></script>
 <script src="rightWall.js"></script>
 <script src="leftSpeaker.js"></script>
+<script src="rightSpeaker.js"></script>
 <script src="bouncer.js"></script>
 
 <script>
