--- a/javascript/index.html
+++ b/javascript/index.html
@@ -11,6 +11,8 @@
 
 <p>Makes awesome thing (based on teacher's other awesome thing).</p>
 
+<audio id='song' src="hero.mp3"></audio>
+
 <script src="utils.js"></script>
 <script src="game.js"></script>
 <script src="stage.js"></script>
