--- a/javascript/index.html
+++ b/javascript/index.html
@@ -6,6 +6,7 @@
   <script src="js/jquery-1.8.3.min.js"></script>
   <script src="js/underscore-min.js"></script>
   <script src="js/three.min.js"></script>
+  <script src='js/THREEx.KeyboardState.js'></script>
 </head>
 <body>
 
