--- a/javascript/index.html
+++ b/javascript/index.html
@@ -24,6 +24,7 @@
 <script src="leftSpeaker.js"></script>
 <script src="rightSpeaker.js"></script>
 <script src="bouncer.js"></script>
+<script src="text.js"></script>
 
 <script>
 
