--- a/javascript/index.html
+++ b/javascript/index.html
@@ -25,6 +25,7 @@
 <script src="rightSpeaker.js"></script>
 <script src="bouncer.js"></script>
 <script src="text.js"></script>
+<script src="beat.js"></script>
 
 <script>
 
