--- a/javascript/index.html
+++ b/javascript/index.html
@@ -26,6 +26,7 @@
 <script src="bouncer.js"></script>
 <script src="text.js"></script>
 <script src="beat.js"></script>
+<script src="roboBouncer.js"></script>
 
 <script>
 
