--- a/javascript/index.html
+++ b/javascript/index.html
@@ -23,7 +23,7 @@
 <script src="rightWall.js"></script>
 <script src="leftSpeaker.js"></script>
 <script src="rightSpeaker.js"></script>
-<script src="bouncer.js"></script>
+<script src="bouncer1.js"></script>
 <script src="text.js"></script>
 <script src="beat.js"></script>
 <script src="roboBouncer.js"></script>
