--- a/javascript/index.html
+++ b/javascript/index.html
@@ -24,6 +24,7 @@
 <script src="leftSpeaker.js"></script>
 <script src="rightSpeaker.js"></script>
 <script src="bouncer1.js"></script>
+<script src="bouncer2.js"></script>
 <script src="text.js"></script>
 <script src="beat.js"></script>
 <script src="roboBouncer.js"></script>
