new song (mine)

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -12,7 +12,7 @@
 
 <p>Makes awesome thing (based on teacher's other awesome thing).</p>
 
-<audio id='song' src="happydappy.mp3"></audio>
+<audio id='song' src="BSC.mp3"></audio>
 
 <script src="utils.js"></script>
 <script src="game.js"></script>
