--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,45 +1,16 @@
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Bert's  Awesome Thingy of Awesome</title>
-  <script src="js/jquery-1.8.3.min.js"></script>
-  <script src="js/underscore-min.js"></script>
-  <script src="js/three.min.js"></script>
-  <script src='js/THREEx.KeyboardState.js'></script>
-</head>
-<body>
-
-<p>Makes awesome thing (based on teacher's other awesome thing).</p>
-
-<audio id='song' src="BSC.mp3"></audio>
-
-<script src="utils.js"></script>
-<script src="game.js"></script>
-<script src="stage.js"></script>
-<script src="back.js"></script>
-<script src="backWall.js"></script>
-<script src="leftWall.js"></script>
-<script src="rightWall.js"></script>
-<script src="leftSpeaker.js"></script>
-<script src="rightSpeaker.js"></script>
-<script src="bouncer1.js"></script>
-<script src="bouncer2.js"></script>
-<script src="text.js"></script>
-<script src="beat.js"></script>
-<script src="roboBouncer.js"></script>
-
-<script>
-
-//Starts the game
-//test
-
-var game = new Game();
-game.init();
-game.start();
-
-</script>
-
-</body>
+<html>
+  <head>
+    <title>Game Prototype 2</title>
+  </head>
+  <body>
+  
+  <p>GAME PROTOTYPE 2: SHIFT ESCAPE</p>
+  <p>Controls: Press Space on the beat to score.  Not pressing space will not reduce 
+  your score, so feel free to take a break!  The bouncy balls will tell you how you're 
+  doing (Green = Good).</p>
+  
+  <a href="file:game.html">Game Prototype 2</a> 
+   
+  </body>
 </html>
-
