--- a/javascript/index.html
+++ b/javascript/index.html
@@ -10,7 +10,7 @@
   your score, so feel free to take a break!  The bouncy balls will tell you how you're 
   doing (Green = Good).</p>
   
-  <a href="file:game.html">Game Prototype 2</a> 
+  <a href="file:gamePlay.html">Game Prototype 2</a> 
    
   </body>
 </html>
